2006-08-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (error \box0): smaller font.

2006-08-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking Macros): all commas inside macro calls
	are quoted, it seems.  From Patrice.

2006-07-25  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_MINIX): remove, as it seems there is nowhere to
	call it, and is it really necessary these days?

	* doc/info-stnd.texi (What is Info?): suggest the Emacs Info
	reader for the nicest display.

2006-07-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\onepageout): hardwire a 24pt space before
	\footlinebox, instead of 2\baselineskip.  If the page break occurs
	at a heading, for instance, \baselineskip might be larger, causing
	the footer to jump.
	(\oddfootingyyy): likewise (although doesn't really matter here).
	Report from Werner Lemberg, 02 Jun 2006 07:44:36 +0200.

	* doc/texinfo.txi: use @copyright{} in @copying, not (C).

2006-07-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\code): make ' active.
	(@lisp,@example): call \quoteexpand.
	(\quoteexpand): new definition to make ' active.
	(\singlequotechar): the active definition of '; if
	the variable codequoteundirected is @set, use char"d from tt
	instead of the regular directed quote.
	This is all to make pasting of ' in examples work in more pdf
	viewers, at least evince.
	From: Han-Wen Nienhuys, 2 Jun 2006 01:22:44 +0000.

2006-07-10  <Ralf.Wildenhues@gmx.de>

	* makeinfo/html.c (insert_html_tag_with_attribute): Treat `samp'
	special, to allow it to nest.
	* makeinfo/cmds.c (cm_code): use insert_html_tag to add `samp'
	instead of add_word, so that the roll-back of outer tags works
	correctly.  (This fixes @option inside of @emph causing badly
	nested tags in the HTML output, see 8 Jun 2006 00:12:55 +0200 mail.
	The general problem still remains.)
	* makeinfo/tests/emph-option: New test.
	* makeinfo/tests/emph-option.txi: New file.
	* makeinfo/tests/Makefile.am: Adjust.

2006-07-09  Karl Berry  <karl@gnu.org>
